# laxtop_server

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  nginx.conf
api/migrations/: .gitignore
api/migrations/2019-06-22-000001_create_table_user/: up.sql
api/migrations/2019-06-22-000002_create_table_supplier/: down.sql  up.sql
api/migrations/2019-06-22-000003_create_table_admin/: down.sql  up.sql
api/migrations/2019-06-22-000004_create_table_session/: down.sql  up.sql
api/migrations/2019-06-22-000005_create_table_supplier_phone/: down.sql  up.sql
api/migrations/2019-06-22-000006_create_table_agent/: down.sql  up.sql
api/migrations/2019-06-22-000007_create_table_telegram_user/: down.sql  up.sql
api/migrations/2019-06-23-212545_create_table_product/: down.sql  up.sql
api/migrations/2019-06-26-165136_create_table_image/: down.sql  up.sql
api/migrations/2019-06-28-151745_create_table_contact_phone/: down.sql  up.sql
api/migrations/2019-07-12-142118_create_table_invoice/: down.sql  up.sql
api/migrations/2019-07-12-142630_create_table_invoice_product/: down.sql  up.sql
api/migrations/2019-07-12-232418_create_table_login/: down.sql  up.sql
api/migrations/2019-09-11-125002_create_table_supplier_polygon/: down.sql  up.sql
api/migrations/2019-09-11-125004_create_table_country/: down.sql  up.sql
api/migrations/2019-09-11-125659_create_table_country_phone_code/: down.sql  up.sql
api/migrations/2019-09-12-223454_create_table_supplier_sequence/: down.sql  up.sql
api/migrations/2019-09-12-223455_create_table_spot_supplier/: down.sql  up.sql
api/migrations/2019-09-12-223456_create_table_user_spot/: down.sql  up.sql
api/migrations/2019-09-12-223457_create_table_user_history_product/: down.sql  up.sql
api/migrations/2019-09-12-223458_create_table_user_history_supplier/: down.sql  up.sql
api/migrations/2019-09-12-234716_create_table_spot/: down.sql  up.sql
api/migrations/2019-09-12-234717_create_table_spot_owner/: down.sql  up.sql
api/migrations/2020-05-23-125916_create_table_promo_cat/: down.sql  up.sql
api/migrations/2020-05-23-130703_create_table_promo_group/: down.sql  up.sql
api/migrations/2020-05-23-131548_create_table_user_promo_cat/: down.sql  up.sql
api/migrations/2020-05-24-125547_create_table_promo/: down.sql  up.sql
api/migrations/2020-05-24-191744_create_table_promo_cat_updated/: down.sql  up.sql
api/node_firebase/: package-lock.json  package.json
api/node_firebase/src/: main.js  to_webp.js
api/src/: guard.rs  main.rs  schema.rs
api/src/base/: cleaner.rs  mod.rs  valid.rs
api/src/model/: country_phone_code.rs  firebase.rs  joinable.rs  mod.rs  spot_supplier.rs  supplier_id_experiment.rs  supplier_sequence.rs  user_history_product.rs  user_history_supplier.rs  user_spot.rs
api/src/model/agent/: agent_spot.rs  mod.rs  new_agent_spot.rs  spot_user.rs
api/src/model/common/: api_key.rs  (+2 more)
api/src/route/: mod.rs
api/src/telegram/: mod.rs  telegram_helper.rs  text_mono_rectangle.rs
api/static/i/: .gitignore
(+84 files in other folders)
