[package]
name = "laxtop_api"
version = "0.2.0"
authors = ["Stanislav Sagan"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.6", default-features = false }
diesel = { version = "1.4.5", features = ["mysql", "chrono"] }
chrono = { version = "*", features = ["serde"] }
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"
rand = "0.8.3"
regex = "1.4.3"
validator = "0.12.0"
validator_derive = "0.12.0"
futures = "0.3.12"
tgbot = "0.12.1"
tokio = { version = "1.1.1", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = "0.11.0"
sha2 = "0.9.3"
files_to_sub_dirs = { git = "https://github.com/incker/files_to_sub_dirs", rev = "2b3ddbc" }
telegram_oauth = { git = "https://github.com/incker/telegram_oauth", rev = "711360b" }
diesel_migrations = "1.4.0"
image = "0.23.13"
geo = "0.17.0"
geo-types = "0.7.0"
base64 = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "serve", "diesel_mysql_pool"]

[profile.release]
opt-level = 3
lto = true
