[package]
name = "laxtop_api"
version = "0.2.0"
authors = ["Stanislav Sagan"]
edition = "2018"

[dependencies]
rocket = { version = "0.4.7", default-features = false }
diesel = { version = "1.4.6", features = ["mysql", "chrono"] }
chrono = { version = "*", features = ["serde"] }
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
rand = "0.8.3"
regex = "1.4.5"
validator = "0.13.0"
validator_derive = "0.13.0"
futures = "0.3.14"
tgbot = "0.13.0"
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = "0.11.3"
sha2 = "0.9.3"
radix_fmt = "1.0.0"
telegram_oauth = { git = "https://github.com/incker/telegram_oauth", rev = "711360b" }
diesel_migrations = "1.4.0"
image = "0.23.14"
geo = "0.17.1"
geo-types = "0.7.1"
base64 = "0.13.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "serve", "diesel_mysql_pool"]

[profile.release]
opt-level = 3
lto = true
